added some queries

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     est. Doloremque ex illo voluptas repellat ipsam sed nisi ea tempore?
   </p>
   <div class="grid">
-    <div></div>
+    <div class="test"></div>
     <div></div>
     <div></div>
     <div></div>
